--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.0.5",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.5",
     "@angular/cdk": "^11.2.4",
+    "@angular/cli": "^11.2.6",
     "@angular/common": "~11.2.5",
     "@angular/compiler": "~11.2.5",
+    "@angular/compiler-cli": "^11.2.7",
     "@angular/core": "~11.2.5",
     "@angular/forms": "~11.2.5",
     "@angular/localize": "~11.2.5",
@@ -26,17 +29,20 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.0",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.1.5",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.3",
-    "@angular/cli": "~11.2.4",
-    "@angular/compiler-cli": "~11.2.5",
+    "@angular/cli": "^11.2.6",
+    "@angular/compiler-cli": "^11.2.7",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -51,5 +57,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
+  },
+  "engines": {
+    "node": "14.15.3",
+    "npm": "6.14.10"
   }
 }
